= Changelog

== Unreleased

* https://github.com/clj-commons/etaoin/issues/383[#383]: Drop testing for Safari on Windows
* Docs
** https://github.com/clj-commons/etaoin/issues/393[#393]: Add changelog
* Internal quality
**  https://github.com/clj-commons/etaoin/issues/382[#382]: Fix process fork testing on Windows

== v0.4.6

* https://github.com/clj-commons/etaoin/issues/367[#367]: Use actions to fix double-click

== v0.4.5

* https://github.com/clj-commons/etaoin/pull/365[#365]: Improve status messages when waiting

== v0.4.4

* Add v2 api

== v0.4.3

* Fix user-agent functions

== v0.4.2

* Add user-agent functions to api

== v0.4.1

* https://github.com/clj-commons/etaoin/issues/347[#347]: Add support for mltiple clicks
* https://github.com/clj-commons/etaoin/pull/349[#349]: Fix typo for duration within `add-action`

== v0.4.0

* https://github.com/clj-commons/etaoin/issues/44[#44]: Add `with-screenshots` macro
* https://github.com/clj-commons/etaoin/issues/196[#196]: Add support for running Selenium IDE files
** https://github.com/clj-commons/etaoin/issues/336[#336]: Docs
** https://github.com/clj-commons/etaoin/issues/329[#329]: Cli entry point
* https://github.com/clj-commons/etaoin/issues/103[#103]: Add w3c webdriver action support
* https://github.com/clj-commons/etaoin/issues/111[#111]: Stop using atom for storing browser instance

== v0.3.10

* https://github.com/clj-commons/etaoin/issues/317[#317]: Add a description of the trouble with chromedriver
* https://github.com/clj-commons/etaoin/issues/316[#316]: Add with-tmp-dir for tests
* https://github.com/clj-commons/etaoin/issues/307[#307]: update examples for docker and remote connection
* https://github.com/clj-commons/etaoin/issues/315[#315]: Add :fn/has-string && return old version has-text
* https://github.com/clj-commons/etaoin/issues/314[#314]: Fix quit fn for remote driver
* https://github.com/clj-commons/etaoin/issues/311[#311]: Fix typos - headless